typescript/checker/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            208,
        ),
        hi: BytePos(
            209,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/classes/members/accessibility/classPropertyIsPublicByDefault.ts:13:5
   |
13 | var c: C;
   |     ^

